; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/mm/extr_isram-driver.c_isram_check_addr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/mm/extr_isram-driver.c_isram_check_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@L1_CODE_START = common dso_local global i64 0, align 8
@L1_CODE_LENGTH = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [41 x i8] c"copy involving %p length (%zu) too long\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64)* @isram_check_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @isram_check_addr(i8* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = load i64, i64* @L1_CODE_START, align 8
  %8 = inttoptr i64 %7 to i8*
  %9 = icmp uge i8* %6, %8
  br i1 %9, label %10, label %32

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  %12 = load i64, i64* @L1_CODE_START, align 8
  %13 = load i64, i64* @L1_CODE_LENGTH, align 8
  %14 = add nsw i64 %12, %13
  %15 = inttoptr i64 %14 to i8*
  %16 = icmp ult i8* %11, %15
  br i1 %16, label %17, label %32

17:                                               ; preds = %10
  %18 = load i8*, i8** %4, align 8
  %19 = load i64, i64* %5, align 8
  %20 = getelementptr i8, i8* %18, i64 %19
  %21 = load i64, i64* @L1_CODE_START, align 8
  %22 = load i64, i64* @L1_CODE_LENGTH, align 8
  %23 = add nsw i64 %21, %22
  %24 = inttoptr i64 %23 to i8*
  %25 = icmp ugt i8* %20, %24
  br i1 %25, label %26, label %31

26:                                               ; preds = %17
  %27 = call i32 @show_stack(i32* null, i32* null)
  %28 = load i8*, i8** %4, align 8
  %29 = load i64, i64* %5, align 8
  %30 = call i32 @pr_err(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i8* %28, i64 %29)
  br label %31

31:                                               ; preds = %26, %17
  store i32 1, i32* %3, align 4
  br label %33

32:                                               ; preds = %10, %2
  store i32 0, i32* %3, align 4
  br label %33

33:                                               ; preds = %32, %31
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @show_stack(i32*, i32*) #1

declare dso_local i32 @pr_err(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
